# c_datastructures

./: .gitignore  CMakeLists.txt  CMakePresets.json
main/: CMakeLists.txt
main/src/: linkedlist.h  main.c
